Add recitation starter code

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Social Media API Testing</title>
+  <title>API testing</title>
   <link rel="stylesheet" href="style.css">
   <script type="module" src="util.js"></script>
 </head>
 <body>
-  <h1>Not Fritter</h1>
+  <h1>App Name</h1>
   <main>
     <section id="operations">
       <h2>API Operations</h2>
